--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -1,38 +1,3 @@
-name: Build and Release Python App
-
-on:
-  push:
-    branches:
-      - main
-
-permissions:
-  contents: write
-
-jobs:
-  build-windows:
-    runs-on: windows-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: Install PyInstaller
-        run: pip install pyinstaller
-
-      - name: Build with PyInstaller
-        run: pyinstaller --onefile --windowed --name snake main.py
-
-      - name: Upload Windows Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: snake-windows
-          path: dist/snake.exe
-
   build-mac:
     runs-on: macos-latest
 
@@ -61,27 +26,27 @@ jobs:
         run: |
           python3 <<EOF
           from PIL import Image, ImageDraw, ImageFont
-          ascii_art = [
-              "  _____              _        ",
-              " / ____|            | |       ",
-              "| (___   ___  _ __  | | _____ ",
-              " \\___ \\ / _ \\| '_ \\ | |/ / __|",
-              " ____) | (_) | | | ||   <\\__ \\",
-              "|_____/ \\___/|_| |_||_|\\_\\___/",
-              "",
-              "Drag Snake.app to Applications to install!"
-          ]
+          ascii_art = '''
+  _____              _        
+ / ____|            | |       
+| (___   ___  _ __  | | _____ 
+ \\___ \\ / _ \\| '_ \\ | |/ / __|
+ ____) | (_) | | | ||   <\\__ \\
+|_____/ \\___/|_| |_||_|\\_\\___/
+                              
+Drag Snake.app to Applications to install!
+          '''.splitlines()
           W, H = 600, 400
           img = Image.new("RGB", (W, H), (240, 240, 240))
           draw = ImageDraw.Draw(img)
           try:
               font = ImageFont.truetype("Menlo.ttc", 24)
-          except:
+          except Exception:
               font = ImageFont.load_default()
           y = 60
           for line in ascii_art:
               draw.text((40, y), line, font=font, fill=(0,0,0))
-              y += 40
+              y += 34
           img.save("dmg-background.png")
           EOF
 
@@ -107,44 +72,3 @@ jobs:
         with:
           name: snake-mac
           path: dmg_source/Snake.dmg
-
-  release:
-    runs-on: ubuntu-latest
-    needs: [build-windows, build-mac]
-
-    steps:
-      - name: Download Windows Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: snake-windows
-
-      - name: Download Mac DMG Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: snake-mac
-
-      - name: Set Release Version (auto-increment)
-        id: version
-        run: |
-          latest_tag=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+$' | head -n 1)
-          if [ -z "$latest_tag" ]; then
-            echo "VERSION=1.0" >> $GITHUB_ENV
-          else
-            major=$(echo $latest_tag | cut -d. -f1 | sed 's/v//')
-            minor=$(echo $latest_tag | cut -d. -f2)
-            next_minor=$((minor + 1))
-            echo "VERSION=${major}.${next_minor}" >> $GITHUB_ENV
-          fi
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ env.VERSION }}
-          name: "Release v${{ env.VERSION }}"
-          draft: false
-          prerelease: false
-          files: |
-            snake.exe
-            dmg_source/Snake.dmg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
