--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -11,7 +11,6 @@ permissions:
 jobs:
   build-windows:
     runs-on: windows-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,10 +21,12 @@ jobs:
           python-version: '3.x'
 
       - name: Install PyInstaller
-        run: pip install pyinstaller
+        run: |
+          pip install pyinstaller
 
       - name: Build with PyInstaller
-        run: pyinstaller --onefile --windowed --name snake main.py
+        run: |
+          pyinstaller --onefile --windowed --name snake main.py
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
@@ -35,7 +36,6 @@ jobs:
 
   build-mac:
     runs-on: macos-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -50,48 +50,53 @@ jobs:
           pip install pyinstaller pillow
 
       - name: Build with PyInstaller
-        run: pyinstaller --onefile --windowed --name snake main.py
+        run: |
+          pyinstaller --onefile --windowed --name snake main.py
 
       - name: Create .app Bundle
         run: |
           mkdir -p Snake.app/Contents/MacOS
           cp dist/snake Snake.app/Contents/MacOS/snake
+          chmod +x Snake.app/Contents/MacOS/snake
 
-      - name: Generate ASCII Art PNG
+      - name: Generate ASCII Art PNG (create script then run it)
         run: |
-          python3 <<EOF
-from PIL import Image, ImageDraw, ImageFont
-ascii_art = [
-    "  _____              _        ",
-    " / ____|            | |       ",
-    "| (___   ___  _ __  | | _____ ",
-    " \\___ \\ / _ \\| '_ \\ | |/ / __|",
-    " ____) | (_) | | | ||   <\\__ \\",
-    "|_____/ \\___/|_| |_||_|\\_\\___/",
-    "",
-    "Drag Snake.app to Applications to install!"
-]
-W, H = 600, 400
-img = Image.new("RGB", (W, H), (240, 240, 240))
-draw = ImageDraw.Draw(img)
-try:
-    font = ImageFont.truetype("Menlo.ttc", 24)
-except Exception:
-    font = ImageFont.load_default()
-y = 60
-for line in ascii_art:
-    draw.text((40, y), line, font=font, fill=(0,0,0))
-    y += 34
-img.save("dmg-background.png")
-EOF
+          cat > dmg_bg.py <<'PY'
+          from PIL import Image, ImageDraw, ImageFont
+          ascii_art = [
+              "  _____              _        ",
+              " / ____|            | |       ",
+              "| (___   ___  _ __  | | _____ ",
+              " \\___ \\ / _ \\| '_ \\ | |/ / __|",
+              " ____) | (_) | | | ||   <\\__ \\",
+              "|_____/ \\___/|_| |_||_|\\_\\___/",
+              "",
+              "Drag Snake.app to Applications to install!"
+          ]
+          W, H = 600, 400
+          img = Image.new("RGB", (W, H), (240, 240, 240))
+          draw = ImageDraw.Draw(img)
+          try:
+              font = ImageFont.truetype("Menlo.ttc", 20)
+          except Exception:
+              font = ImageFont.load_default()
+          y = 40
+          for line in ascii_art:
+              draw.text((30, y), line, font=font, fill=(0,0,0))
+              y += 30
+          img.save("dmg-background.png")
+          PY
+          python3 dmg_bg.py
 
       - name: Install create-dmg
-        run: brew install create-dmg
+        run: |
+          brew install create-dmg
 
       - name: Create DMG Installer
         run: |
           mkdir -p dmg_source/Applications
           mv Snake.app dmg_source/
+          # create-dmg will place the resulting dmg at the specified output path
           create-dmg \
             --volname "Snake Installer" \
             --window-pos 200 120 \
@@ -112,7 +117,6 @@ EOF
   release:
     runs-on: ubuntu-latest
     needs: [build-windows, build-mac]
-
     steps:
       - name: Download Windows Artifact
         uses: actions/download-artifact@v4
@@ -127,15 +131,21 @@ EOF
       - name: Set Release Version (auto-increment)
         id: version
         run: |
-          latest_tag=$(git tag --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+$' | head -n 1)
+          # find latest tag like vMAJOR.MINOR
+          latest_tag=$(git describe --tags --match "v[0-9]*.[0-9]*" --abbrev=0 2>/dev/null || true)
           if [ -z "$latest_tag" ]; then
             echo "VERSION=1.0" >> $GITHUB_ENV
           else
-            major=$(echo $latest_tag | cut -d. -f1 | sed 's/v//')
-            minor=$(echo $latest_tag | cut -d. -f2)
+            major=$(echo "$latest_tag" | cut -d. -f1 | sed 's/^v//')
+            minor=$(echo "$latest_tag" | cut -d. -f2)
             next_minor=$((minor + 1))
             echo "VERSION=${major}.${next_minor}" >> $GITHUB_ENV
           fi
+
+      - name: List files (debug)
+        run: |
+          echo "Workspace files:"
+          ls -R .
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -145,7 +155,7 @@ EOF
           draft: false
           prerelease: false
           files: |
-            snake.exe
-            dmg_source/Snake.dmg
+            snake-windows/dist/snake.exe
+            snake-mac/dmg_source/Snake.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
