--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,18 +21,19 @@ jobs:
           python-version: '3.x'
 
       - name: Install PyInstaller
-        run: |
-          pip install pyinstaller
+        run: pip install pyinstaller
 
       - name: Build with PyInstaller
-        run: |
-          pyinstaller --onefile --windowed --name snake main.py
+        run: pyinstaller --onefile --windowed --name snake main.py
+
+      - name: Copy Windows exe to root (so artifact path is simple)
+        run: cp dist/snake.exe snake.exe
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
         with:
           name: snake-windows
-          path: dist/snake.exe
+          path: snake.exe
 
   build-mac:
     runs-on: macos-latest
@@ -50,8 +51,7 @@ jobs:
           pip install pyinstaller pillow
 
       - name: Build with PyInstaller
-        run: |
-          pyinstaller --onefile --windowed --name snake main.py
+        run: pyinstaller --onefile --windowed --name snake main.py
 
       - name: Create .app Bundle
         run: |
@@ -89,14 +89,12 @@ jobs:
           python3 dmg_bg.py
 
       - name: Install create-dmg
-        run: |
-          brew install create-dmg
+        run: brew install create-dmg
 
       - name: Create DMG Installer
         run: |
           mkdir -p dmg_source/Applications
           mv Snake.app dmg_source/
-          # create-dmg will place the resulting dmg at the specified output path
           create-dmg \
             --volname "Snake Installer" \
             --window-pos 200 120 \
@@ -108,30 +106,48 @@ jobs:
             dmg_source/Snake.dmg \
             dmg_source/
 
+      - name: Copy DMG to root (so artifact path is simple)
+        run: cp dmg_source/Snake.dmg Snake.dmg
+
       - name: Upload Mac DMG Artifact
         uses: actions/upload-artifact@v4
         with:
           name: snake-mac
-          path: dmg_source/Snake.dmg
+          path: Snake.dmg
 
   release:
     runs-on: ubuntu-latest
     needs: [build-windows, build-mac]
     steps:
+      - name: Checkout (needed for git/tag commands)
+        uses: actions/checkout@v4
+
       - name: Download Windows Artifact
         uses: actions/download-artifact@v4
         with:
           name: snake-windows
+          path: ./artifacts/snake-windows
 
-      - name: Download Mac DMG Artifact
+      - name: Download Mac Artifact
         uses: actions/download-artifact@v4
         with:
           name: snake-mac
+          path: ./artifacts/snake-mac
+
+      - name: List workspace for debugging
+        run: ls -la && ls -la artifacts && ls -la artifacts/snake-windows || true
+
+      - name: Move files to workspace root (expected by release action)
+        run: |
+          # downloaded artifacts placed under artifacts/<artifact-name>/
+          cp artifacts/snake-windows/snake.exe . || cp artifacts/snake-windows/snake . || true
+          cp artifacts/snake-mac/Snake.dmg . || true
+          echo "Files in root now:"
+          ls -la
 
       - name: Set Release Version (auto-increment)
         id: version
         run: |
-          # find latest tag like vMAJOR.MINOR
           latest_tag=$(git describe --tags --match "v[0-9]*.[0-9]*" --abbrev=0 2>/dev/null || true)
           if [ -z "$latest_tag" ]; then
             echo "VERSION=1.0" >> $GITHUB_ENV
@@ -142,12 +158,7 @@ jobs:
             echo "VERSION=${major}.${next_minor}" >> $GITHUB_ENV
           fi
 
-      - name: List files (debug)
-        run: |
-          echo "Workspace files:"
-          ls -R .
-
-      - name: Create GitHub Release
+      - name: Create GitHub Release with binaries attached
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ env.VERSION }}
@@ -155,7 +166,7 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            snake-windows/dist/snake.exe
-            snake-mac/dmg_source/Snake.dmg
+            snake.exe
+            Snake.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
